  separating/cgmip/nodelimit.
- new parameter <presolving/gateextraction/onlysetpart> by default is set to FALSE, that parameter allows you to
  only extract set-partitioning and no and-constraints
- new parameter oncepernode in Rounding and Simple Rounding heuristic
- new parameter <numerics/hugeval> that defines the smalles value counting as huge (see new method SCIPisHugeValue())

features:
- SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
  set relaxrows = FALSE
- the check script now recognizes MIQCP and MINLP instances
- new column showing the pseudo objective value
- time for initpre and exitpre methods is now also measured in presolving time
- digraph structure added to misc.c and pub_misc.h that can be used to handle directed graphs, compute undirected
  components in the graph, and sort these components (almost) topologically
- beta-version of a MATLAB interface can be found under interfaces/matlab
- SCIP does now print an info message when the root LP could not be solved or is unbounded
- added setup timer to all plugins and therefor SCIP<plugin-type>GetSetupTime() methods in all pub_plugin-type.h to ask
  for this time (, e.g. SCIPeventhdlrGetSetupTime() in pub_event.h)
- added counter and clock for SCIPcopy() calls

SCIP version 2.1.2
==================

fixed bugs:
- fixed bug in SCIPsolveKnapsackExactly()
- fixed bug in varAddTransitiveImplic() in var.c, when adding implications on special aggregated, namely negated,
  variables
- fixed bug in cons_quadratic where bounds on activity of quadratic term were not always invalidated when quadratic
  variables were removed
- fixed bug in heur_undercover.c, where a variable with fixed bounds but not of status SCIP_VARSTATUS_FIXED was wrongly
  handled
- fixed bug in cons.c, where after a restart the arrays for all initial constraints were corrected in the initsol