@@ -33,17 +33,23 @@ enum SCIP_Status
    SCIP_STATUS_UNKNOWN        =  0,     /**< the solving status is not yet known */
    SCIP_STATUS_USERINTERRUPT  =  1,     /**< the user interrupted the solving process (by pressing CTRL-C) */
    SCIP_STATUS_NODELIMIT      =  2,     /**< the solving process was interrupted because the node limit was reached */
-   SCIP_STATUS_STALLNODELIMIT =  3,     /**< the solving process was interrupted because the node limit was reached */
-   SCIP_STATUS_TIMELIMIT      =  4,     /**< the solving process was interrupted because the time limit was reached */
-   SCIP_STATUS_MEMLIMIT       =  5,     /**< the solving process was interrupted because the memory limit was reached */
-   SCIP_STATUS_GAPLIMIT       =  6,     /**< the solving process was interrupted because the gap limit was reached */
-   SCIP_STATUS_SOLLIMIT       =  7,     /**< the solving process was interrupted because the solution limit was reached */
-   SCIP_STATUS_BESTSOLLIMIT   =  8,     /**< the solving process was interrupted because the solution improvement limit
-                                         *   was reached */
-   SCIP_STATUS_OPTIMAL        =  9,     /**< the problem was solved to optimality, an optimal solution is available */
-   SCIP_STATUS_INFEASIBLE     = 10,     /**< the problem was proven to be infeasible */
-   SCIP_STATUS_UNBOUNDED      = 11,     /**< the problem was proven to be unbounded */
-   SCIP_STATUS_INFORUNBD      = 12      /**< the problem was proven to be either infeasible or unbounded */
+   SCIP_STATUS_TOTALNODELIMIT =  3,     /**< the solving process was interrupted because the total node limit was
+					 *   reached (incl. restarts)
+					 */
+   SCIP_STATUS_STALLNODELIMIT =  4,     /**< the solving process was interrupted because the node limit was reached */
+   SCIP_STATUS_TIMELIMIT      =  5,     /**< the solving process was interrupted because the time limit was reached */
+   SCIP_STATUS_MEMLIMIT       =  6,     /**< the solving process was interrupted because the memory limit was reached */
+   SCIP_STATUS_GAPLIMIT       =  7,     /**< the solving process was interrupted because the gap limit was reached */
+   SCIP_STATUS_SOLLIMIT       =  8,     /**< the solving process was interrupted because the solution limit was
+					 *  reached
+					 */
+   SCIP_STATUS_BESTSOLLIMIT   =  9,     /**< the solving process was interrupted because the solution improvement limit
+                                         *   was reached
+					 */
+   SCIP_STATUS_OPTIMAL        = 10,     /**< the problem was solved to optimality, an optimal solution is available */
+   SCIP_STATUS_INFEASIBLE     = 11,     /**< the problem was proven to be infeasible */
+   SCIP_STATUS_UNBOUNDED      = 12,     /**< the problem was proven to be unbounded */
+   SCIP_STATUS_INFORUNBD      = 13      /**< the problem was proven to be either infeasible or unbounded */
 };
 typedef enum SCIP_Status SCIP_STATUS;
 
